--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
     }
   </style>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="/client.js"></script>
 </head>
 
 <body>
